replaced questions answer in the cell

--- a/first-neural-network/DLND Your first neural network.ipynb
+++ b/first-neural-network/DLND Your first neural network.ipynb
@@ -1009,10 +1009,11 @@
     " \n",
     "Answer these questions about your results. How well does the model predict the data? Where does it fail? Why does it fail where it does?\n",
     "\n",
-    "Looks like sigmoind layer does not allow to make a good regression.\n",
-    "Maybe some numercial intpus (like temperature for instance) has to have direct influence on the final predition.\n",
+    "> **Note:** You can edit the text in this cell by double clicking on it. When you want to render the text, press control + enter\n",
     "\n",
-    "#### Your answer below"
+    "#### Your answer below\n",
+    "\n",
+    "Looks like sigmoind layer does not allow to make a good regression. Maybe some numercial intpus (like temperature for instance) has to have direct influence on the final predition."
    ]
   },
   {
