--- a/first-neural-network/DLND Your first neural network.ipynb
+++ b/first-neural-network/DLND Your first neural network.ipynb
@@ -1013,7 +1013,7 @@
     "\n",
     "#### Your answer below\n",
     "\n",
-    "Preditions are quite good. Except maybe christmass season, model does not take into account that many people spend these days with familied. Maybe Christamass ans other specil days have to have their own "
+    "Preditions are quite good. Except maybe christmass season, model does not take into account that many people spend these days with their families. Maybe Christamass ans other specil days have to have their own features.\n"
    ]
   },
   {
